--- a/pom.xml
+++ b/pom.xml
@@ -99,5 +99,15 @@
   </dependencies>
   <build>
     <finalName>Tricol</finalName>
+      <plugins>
+          <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <configuration>
+                  <source>16</source>
+                  <target>16</target>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
 </project>
