--- a/src/main/webapp/WEB-INF/database.properties
+++ b/src/main/webapp/WEB-INF/database.properties
@@ -1,3 +1,4 @@
 db.driver=org.postgresql.Driver
 db.url=jdbc:postgresql://localhost:5432/tricol
 db.username=postgres
+db.password=MhamedOuhanane@1234
