GDAPT-17 realiser la connexion avec la base de donnee

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=tricol
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/tricol
+spring.datasource.username=postgres
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
+spring.liquibase.enabled=true
+
+spring.jackson.deserialization.fail-on-unknown-properties=false
