GDAPT-16 Réaliser la structure de projet

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
 spring.liquibase.enabled=true
 
 spring.jackson.deserialization.fail-on-unknown-properties=false
+
+spring.port=8080
